add some handlers
